--- a/java_script/index.html
+++ b/java_script/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Curso de JavaScript</title>
+
+</head>
+
+<body>
+
+    <script>
+        console.log("Olá mundo")
+    </script>
+    
+</body>
+
+</html>
