--- a/java_script/index.html
+++ b/java_script/index.html
@@ -13,7 +13,24 @@
 <body>
 
     <script>
-        console.log("Olá mundo")
+        
+        var nome = "Diego"
+        var idade = 23
+        var peso = 80.5
+        var humano = true
+
+        var alunos = ['Diego', 'Gabriel', 'Lucas']
+
+        var aluno = {
+            nome: 'Diego',
+            idade: 23,
+            peso: 80.5,
+            humano: true
+        };
+
+        console.log(alunos[1])
+        console.log(aluno.idade)
+
     </script>
     
 </body>
