Estruturas de repeticao

--- a/java_script/index.html
+++ b/java_script/index.html
@@ -14,18 +14,18 @@
 
     <script>
         
-        var sexo = 'M'
-
-        if(sexo === 'M'){
-            console.log('Masculino')
-        } else {
-            console.log('Feminino')
+        //FOR
+        for(var i = 0; i <= 100; i++){
+            console.log(i)
         }
 
-        //Condição ternária
-        var retorno = (sexo === 'M') ? 'Masculino' : 'Feminino'
+        //WHILE
+        var j = 219354872
+        while(j > 50){
+            console.log(j)
 
-        console.log(retorno)
+            j /= 5
+        }
 
     </script>
     
