--- a/java_script/exercicios/exercicio3.html
+++ b/java_script/exercicios/exercicio3.html
@@ -23,6 +23,8 @@
 
         var skills = ["Javascript", "ReactJS", "React Native"];
         temHabilidade(skills); // true ou false
+
+    Dica: para verificar se um vetor contém um valor, utilize o método indexOf.
     -->
 
     <script>
